--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+monitor_speed = 115200
+lib_deps = 
+	paulstoffregen/OneWire@^2.3.8
+	milesburton/DallasTemperature@^3.11.0
