--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,4 @@ monitor_speed = 115200
 lib_deps = 
 	paulstoffregen/OneWire@^2.3.8
 	milesburton/DallasTemperature@^3.11.0
+	esphome/ESPAsyncWebServer-esphome@^3.1.0
