--- a/platformio.ini
+++ b/platformio.ini
@@ -9,11 +9,16 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:ESP_TEMP_LOG]
-;platform = espressif32
-;board = esp32doit-devkit-v1
-platform = espressif8266
-board = d1_mini
+platform = espressif32
+board = esp32doit-devkit-v1
+;platform = espressif8266
+;board = d1_mini
 framework = arduino
+board_build.filesystem = littlefs
+board_build.f_flash = 80000000L
+board_upload.flash_size = 4MB
+board_build.partitions = table_partition_4mb.csv
+upload_speed = 921600
 monitor_speed = 115200
 lib_deps = 
 	paulstoffregen/OneWire@^2.3.8
